force-app/main/default/objects/Meeting__c/fields/AddQuestionVisibility__c.field-meta.xml
<CustomField>
    <fullName>AddQuestionVisibility__c</fullName>
    <formula>(Completed__c + 3) &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddQuestionVisibility</label>
    <type>Checkbox</type>
</CustomField>