force-app/main/default/objects/Meeting__c/fields/Associate_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Associate_s_Email__c</fullName>
    <label>Associate&apos;s Email</label>
    <type>Email</type>
</CustomField>