force-app/main/default/objects/Meeting__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting</relationshipLabel>
    <relationshipName>Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>