force-app/main/default/objects/Meeting__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Participating_Client__r.Participant__r.FirstName + &quot; &quot; + Participating_Client__r.Participant__r.LastName+ &quot;, &quot; + &quot;Company: &quot; + Participating_Client__r.Participant__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>