force-app/main/default/objects/Meeting__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF(ISPICKVAL(Meeting_Status__c,&quot;Completed&quot;), TEXT(NOW()),&apos;&apos;)</formula>
    <label>Completed</label>
    <type>Text</type>
</CustomField>