force-app/main/default/objects/Meeting__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Client_Name__c +&quot; &quot; + TEXT(MONTH(DATEVALUE(Scheduled__c)))+&quot;/&quot; + TEXT(DAY(DATEVALUE(Scheduled__c)))+&quot;/&quot; + TEXT(YEAR(DATEVALUE(Scheduled__c))) + &quot; &quot; + TEXT(-7 + HOUR(TIMEVALUE(Scheduled__c)))+&quot;:&quot; + LPAD(TEXT(MINUTE(TIMEVALUE(Scheduled__c))), 2, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>