force-app/main/default/objects/Meeting__c/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <label>Meeting Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Mock</fullName>
            </value>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>On Schedule</fullName>
                <isActive>false</isActive>
                <label>On Schedule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>