force-app/main/default/objects/Meeting__c/fields/Participating_Client__c.field-meta.xml
<CustomField>
    <fullName>Participating_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participating Client</label>
    <referenceTo>Meeting_Participant__c</referenceTo>
    <relationshipLabel>Meeting</relationshipLabel>
    <relationshipName>Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>