force-app/main/default/objects/Meeting__c/fields/Upcoming__c.field-meta.xml
<CustomField>
    <fullName>Upcoming__c</fullName>
    <formula>IF(StartDateTime__c - NOW() &lt;= 1, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upcoming?</label>
    <type>Checkbox</type>
</CustomField>