force-app/main/default/objects/Meeting__c/recordTypes/Create_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Create_Meeting</fullName>
    <active>true</active>
    <label>Create Meeting</label>
</RecordType>