force-app/main/default/objects/Meeting__c/recordTypes/Create_Time_Slot.recordType-meta.xml
<RecordType>
    <fullName>Create_Time_Slot</fullName>
    <active>true</active>
    <label>Create Time Slot</label>
</RecordType>