force-app/main/default/objects/Meeting__c/recordTypes/Intervention_1_1.recordType-meta.xml
<RecordType>
    <fullName>Intervention_1_1</fullName>
    <active>true</active>
    <label>Intervention 1-1</label>
</RecordType>