force-app/main/default/objects/Meeting__c/recordTypes/Intervention_Batch.recordType-meta.xml
<RecordType>
    <fullName>Intervention_Batch</fullName>
    <active>true</active>
    <label>Intervention Batch</label>
</RecordType>