force-app/main/default/objects/Meeting__c/recordTypes/Interview_1_1.recordType-meta.xml
<RecordType>
    <fullName>Interview_1_1</fullName>
    <active>true</active>
    <label>Interview 1-1</label>
</RecordType>