force-app/main/default/objects/Meeting__c/recordTypes/Interview_Batch.recordType-meta.xml
<RecordType>
    <fullName>Interview_Batch</fullName>
    <active>true</active>
    <label>Interview Batch</label>
</RecordType>