force-app/main/default/objects/Meeting__c/recordTypes/Mock_Interview.recordType-meta.xml
<RecordType>
    <fullName>Mock_Interview</fullName>
    <active>true</active>
    <label>Mock Interview</label>
</RecordType>