force-app/main/default/objects/Meeting__c/validationRules/Check_Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Start_and_End_Date</fullName>
    <active>true</active>
    <description>if end date is before start date, it is an invalid date</description>
    <errorConditionFormula>EndDateTime__c &lt;  StartDateTime__c</errorConditionFormula>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>